Major changes: created barebones Cessna172R with NoAvionics and controls mapped directly to C172RAirframe

--- a/tutorials/01_systems.ipynb
+++ b/tutorials/01_systems.ipynb
@@ -1,6 +1,7 @@
 {
  "cells": [
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -24,8 +25,6 @@
     "A concrete `System` type is specified through a subtype of the abstract `Component` type. This `Component` serves a dual purpose:\n",
     "1. It holds the values for all the (immutable) parameters that characterize a specific instance of that `System` type.\n",
     "2. It provides a dispatch mechanism for extending the set of functions that initialize the `System`'s variables: `x`, `u`, `y` and `s`, and those that implement the `System`'s dynamics.\n",
-    "\n",
-    "**Start with a first order filter**\n",
     "\n",
     "To clarify this, let us consider a simple example: a [mass-spring-damper][1] model.\n",
     "\n",
@@ -59,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -103,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,37 +127,35 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
     "A few comments are in order:\n",
-    "- `SystemX`, `SystemU`, `SystemY` and `SystemD` are empty, trait-like types, used only for dispatch within the `System` constructor. \n",
+    "- `SystemX`, `SystemU`, `SystemY` and `SystemS` are empty, trait-like types, used only for dispatch within the `System` constructor. \n",
     "- Our `System`'s input (the mass-normalized force $f$) is a scalar. Since a plain `Float64` would be immutable, in order to be able to modify its value during simulation, we wrap it around a `Ref`. Alternatively, we could define a custom mutable type holding a single `Float64`.\n",
     "- Being immutable, we could also declare `Y` to be a `NamedTuple`, but defining a custom type is more convenient in certain scenarios.\n",
     "- In this case, we are throwing away the `MassSpringDamper` argument, but if needed we could use it to make the initial values for the `System`'s variables depend on the values of the `MassSpringDamper` parameters.\n",
-    "- If our `System` had no `u`, `y` or `s`, their corresponding method definitions could be omitted and they would be initialized to `nothing` by default. Not so `x`, which is always required.\n",
+    "- If our `System` had no `x`,`u`, `y` or `s`, their corresponding method definitions could be omitted and they would be initialized to `nothing` by default.\n",
     "\n",
     "With this, we can already instantiate our `System`:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "typeof(sys) = System{MassSpringDamper, ComponentVector{Float64, Vector{Float64}, Tuple{Axis{(p = 1, v = 2)}}}, MassSpringDamperY, Base.RefValue{Float64}, MassSpringDamperS, NamedTuple{(:ω_n, :ζ, :Δt_d, :v_ϵ), NTuple{4, Float64}}, NamedTuple{(), Tuple{}}}\n",
-      "ẋ: (p = 0.0, v = 0.0)\n",
-      "x: (p = 0.0, v = 0.0)\n",
-      "y: MassSpringDamperY(0.0, 0.0, 0.0)\n",
-      "u: Base.RefValue{Float64}(0.0)\n",
-      "s: MassSpringDamperS(false, 0.0, 0.0)\n",
-      "t: Base.RefValue{Float64}(0.0)\n",
-      "params: (ω_n = 20.0, ζ = 0.4, Δt_d = 1.0, v_ϵ = 1.0e-6)\n",
-      "subsystems: NamedTuple()\n"
+     "ename": "UndefVarError",
+     "evalue": "UndefVarError: MassSpringDamper not defined",
+     "output_type": "error",
+     "traceback": [
+      "UndefVarError: MassSpringDamper not defined\n",
+      "\n",
+      "Stacktrace:\n",
+      " [1] top-level scope\n",
+      "   @ c:\\Users\\Miguel\\.julia\\dev\\Flight\\tutorials\\01_systems.ipynb:1"
      ]
     }
    ],
@@ -180,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -239,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -259,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -303,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -325,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -345,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -566,15 +563,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.7.2",
+   "display_name": "Julia 1.8.2",
    "language": "julia",
-   "name": "julia-1.7"
+   "name": "julia-1.8"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.7.2"
+   "version": "1.8.2"
   },
   "orig_nbformat": 4,
   "vscode": {
