Moved trim! and linearize! definitions to module Aircraft

--- a/cas.ipynb
+++ b/cas.ipynb
@@ -39,7 +39,7 @@
     "    mixture = 0.5,\n",
     "    flaps = 0.0)\n",
     "\n",
-    "lm = C172Rv0.linearize!(ac; trim_params)\n"
+    "lm = linearize!(ac; trim_params)\n"
    ]
   },
   {
@@ -61,7 +61,9 @@
     "long_dyn = filter(lm;\n",
     "    u = (:elevator, :throttle),\n",
     "    x = (:v_x, :v_z, :θ, :q, :α_filt, :ω_eng),\n",
-    "    y = (:TAS, :α, :θ, :q, :f_x, :f_z, :ω_eng))"
+    "    y = (:TAS, :α, :θ, :q, :f_x, :f_z, :ω_eng))\n",
+    "\n",
+    "#could reduce the model further for CAS by omitting omega_eng and throttle"
    ]
   },
   {
@@ -70,7 +72,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "world = SimpleWorld(Cessna172Rv0(LTF())) |> System; #for simulation, we use LTF kinematics"
+    "# world = SimpleWorld(Cessna172Rv0(LTF())) |> System; #for simulation, we use LTF kinematics"
    ]
   },
   {
@@ -137,14 +139,14 @@
     }
    ],
    "source": [
-    "#trim for the trim conditions above and simulate\n",
-    "(success, result) = C172Rv0.trim!(world; trim_params)\n",
-    "@assert success\n",
-    "sim = Simulation(world; t_end = 30, adaptive = true)\n",
-    "Sim.run!(sim, verbose = true)\n",
-    "# plots = make_plots(sim; Plotting.defaults...)\n",
-    "plots = make_plots(TimeHistory(sim).ac.kinematics; Plotting.defaults...)\n",
-    "save_plots(plots, save_folder = joinpath(\"tmp\", \"trim_sim_test\"))"
+    "# #trim for the trim conditions above and simulate\n",
+    "# (success, result) = trim!(world; trim_params)\n",
+    "# @assert success\n",
+    "# sim = Simulation(world; t_end = 30, adaptive = true)\n",
+    "# Sim.run!(sim, verbose = true)\n",
+    "# # plots = make_plots(sim; Plotting.defaults...)\n",
+    "# plots = make_plots(TimeHistory(sim).ac.kinematics; Plotting.defaults...)\n",
+    "# save_plots(plots, save_folder = joinpath(\"tmp\", \"trim_sim_test\"))"
    ]
   }
  ],
