Checkpoint before project structure tweaks

--- a/src/aircraft/c172r/design/pitch_cas.ipynb
+++ b/src/aircraft/c172r/design/pitch_cas.ipynb
@@ -94,7 +94,7 @@
     "long_dyn_ss = long_dyn |> ss\n",
     "long_dyn_tf = long_dyn_ss |> tf\n",
     "\n",
-    "#could reduce the model further for CAS by omitting omega_eng and throttle\n",
+    "#we can reduce the model further for CAS by omitting omega_eng and throttle\n",
     "pitch_dyn = filter(lm; u = (:elevator,),\n",
     "    x = (:v_x, :v_z, :θ, :q, :α_filt),\n",
     "    y = (:q, :θ, :α, :TAS))\n",
@@ -1031,15 +1031,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Julia 1.8.2",
+   "display_name": "Julia 1.9.2",
    "language": "julia",
-   "name": "julia-1.8"
+   "name": "julia-1.9"
   },
   "language_info": {
    "file_extension": ".jl",
    "mimetype": "application/julia",
    "name": "julia",
-   "version": "1.8.2"
+   "version": "1.9.2"
   },
   "orig_nbformat": 4
  },
