Created FlightComponents module

--- a/src/aircraft/c172r/design/pitch_cas.ipynb
+++ b/src/aircraft/c172r/design/pitch_cas.ipynb
@@ -6,7 +6,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "using Flight\n",
+    "using Flight.FlightAircraft.C172R\n",
+    "using Flight.Physics.Geodesy\n",
+    "\n",
     "using ControlSystems"
    ]
   },
