--- a/tutorials/01_systems.ipynb
+++ b/tutorials/01_systems.ipynb
@@ -22,7 +22,7 @@
     "s_{k+1} = f_d(s_{k}, u_{k}, x_{k}, t_{k})\n",
     "$$\n",
     "\n",
-    "A concrete `System` type is specified through a subtype of the abstract `Component` type. This `Component` serves a dual purpose:\n",
+    "A concrete `System` type is specified through a subtype of the abstract `SystemDefinition` type. This `SystemDefinition` serves a dual purpose:\n",
     "1. It holds the values for all the (immutable) parameters that characterize a specific instance of that `System` type.\n",
     "2. It provides a dispatch mechanism for extending the set of functions that initialize the `System`'s variables: `x`, `u`, `y` and `s`, and those that implement the `System`'s dynamics.\n",
     "\n",
@@ -51,7 +51,7 @@
     "\n",
     "This modification also requires two additional parameters: the damper switching interval $\\Delta t_d$, and a velocity threshold $v_{\\epsilon}$, below which we will consider the system to be stationary.\n",
     "\n",
-    "Now that we have a good idea of what our `System`'s `x`, `u`, `y`, `s` and constant parameters should look like, we can start by defining its `Component` as:\n",
+    "Now that we have a good idea of what our `System`'s `x`, `u`, `y`, `s` and constant parameters should look like, we can start by defining its `SystemDefinition` as:\n",
     "\n",
     "[1]: https://en.wikipedia.org/wiki/Mass-spring-damper_model"
    ]
@@ -74,7 +74,7 @@
    "source": [
     "using Flight\n",
     "\n",
-    "Base.@kwdef struct MassSpringDamper <: Component\n",
+    "Base.@kwdef struct MassSpringDamper <: SystemDefinition\n",
     "    ω_n::Float64 = 1.0 #undamped natural frequency\n",
     "    ζ::Float64 = 1.0 #damping ratio\n",
     "    Δt_d::Float64 = 2 #spring switching time interval\n",
@@ -240,8 +240,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "struct NoContinuousDynamics <: Component end\n",
-    "struct NoDiscreteDynamics <: Component end\n",
+    "struct NoContinuousDynamics <: SystemDefinition end\n",
+    "struct NoDiscreteDynamics <: SystemDefinition end\n",
     "\n",
     "Systems.f_ode!(::System{NoContinuousDynamics}, args...; kwargs...) = nothing\n",
     "Systems.f_step!(::System{NoDiscreteDynamics}, args...; kwargs...) = false\n"
