New initialization with non-recursive SystemU and SystemS, some tweaks to C172Rv2 CAS, a few cosmetic changes

--- a/src/aircraft/c172r/design/v2_pitch_cas.ipynb
+++ b/src/aircraft/c172r/design/v2_pitch_cas.ipynb
@@ -36,11 +36,11 @@
    ],
    "source": [
     "ac = Cessna172Rv0(NED()) |> System #linearization requires NED kinematics\n",
-    "ac.u.airframe.pld.m_pilot = 75\n",
-    "ac.u.airframe.pld.m_copilot = 75\n",
-    "ac.u.airframe.pld.m_lpass = 0\n",
-    "ac.u.airframe.pld.m_rpass = 0\n",
-    "ac.u.airframe.pld.m_baggage = 0\n",
+    "ac.airframe.pld.u.m_pilot = 75\n",
+    "ac.airframe.pld.u.m_copilot = 75\n",
+    "ac.airframe.pld.u.m_lpass = 0\n",
+    "ac.airframe.pld.u.m_rpass = 0\n",
+    "ac.airframe.pld.u.m_baggage = 0\n",
     "\n",
     "trim_params = C172Rv0.TrimParameters(\n",
     "    loc = LatLon(),\n",
