--- a/tutorials/01_systems.ipynb
+++ b/tutorials/01_systems.ipynb
@@ -74,7 +74,7 @@
    "source": [
     "using Flight\n",
     "\n",
-    "Base.@kwdef struct MassSpringDamper <: SystemDefinition\n",
+    "@kwdef struct MassSpringDamper <: SystemDefinition\n",
     "    ω_n::Float64 = 1.0 #undamped natural frequency\n",
     "    ζ::Float64 = 1.0 #damping ratio\n",
     "    Δt_d::Float64 = 2 #spring switching time interval\n",
@@ -108,13 +108,13 @@
    "source": [
     "using ComponentArrays\n",
     "\n",
-    "Base.@kwdef struct MassSpringDamperY\n",
+    "@kwdef struct MassSpringDamperY\n",
     "    p::Float64 = 0.0\n",
     "    v::Float64 = 0.0\n",
     "    a::Float64 = 0.0\n",
     "end\n",
     "\n",
-    "Base.@kwdef mutable struct MassSpringDamperS\n",
+    "@kwdef mutable struct MassSpringDamperS\n",
     "    damper_engaged::Bool = false\n",
     "    t_last_moving::Float64 = 0.0\n",
     "    t_last_stopped::Float64 = 0.0\n",
