Some tweaks to C172R CAS design notebooks

--- a/src/aircraft/c172/c172r/design/roll_yaw_cas.ipynb
+++ b/src/aircraft/c172/c172r/design/roll_yaw_cas.ipynb
@@ -55,107 +55,22 @@
     "    mixture = 0.5,\n",
     "    flaps = 0.0)\n",
     "\n",
-    "lm = Aircraft.linearize!(ac; trim_params)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Lateral Dynamics"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "TransferFunction{Continuous, ControlSystemsBase.SisoRational{Float64}}\n",
-       "Input 1 to output 1\n",
-       "    6.896650469354817s^4 + 351.0541087951662s^3 + 334.4056611062406s^2 + 1165.8194378851767s - 25.014943205567175\n",
-       "---------------------------------------------------------------------------------------------------------------------\n",
-       "1.0s^5 + 56.865975143087915s^4 + 353.5868367615613s^3 + 539.1664580485783s^2 + 1237.542488151249s - 29.06981819903537\n",
-       "\n",
-       "Input 1 to output 2\n",
-       "     -0.1377460027156232s^4 - 8.655225526736444s^3 - 86.79816988490836s^2 + 85.493497069868s + 279.425696314048\n",
-       "---------------------------------------------------------------------------------------------------------------------\n",
-       "1.0s^5 + 56.865975143087915s^4 + 353.5868367615613s^3 + 539.1664580485783s^2 + 1237.542488151249s - 29.06981819903537\n",
-       "\n",
-       "Input 1 to output 3\n",
-       " -7.105427357601002e-15s^4 + 6.884318270499477s^3 + 350.27922199260615s^2 + 326.6348604324503s + 1173.4718525579203\n",
-       "---------------------------------------------------------------------------------------------------------------------\n",
-       "1.0s^5 + 56.865975143087915s^4 + 353.5868367615613s^3 + 539.1664580485783s^2 + 1237.542488151249s - 29.06981819903537\n",
-       "\n",
-       "Input 1 to output 4\n",
-       "0.0\n",
-       "---\n",
-       "1.0\n",
-       "\n",
-       "Input 1 to output 5\n",
-       "   0.09752413457132292s^4 + 5.659545523311579s^3 + 43.30797999934953s^2 + 208.26563198922872s + 60.68094437355276\n",
-       "---------------------------------------------------------------------------------------------------------------------\n",
-       "1.0s^5 + 56.865975143087915s^4 + 353.5868367615613s^3 + 539.1664580485783s^2 + 1237.542488151249s - 29.06981819903537\n",
-       "\n",
-       "Input 1 to output 6\n",
-       "   -2.4432755832570976s^4 - 129.16799289272802s^3 - 379.3761088997345s^2 - 1462.387276001413s - 205.80778481712403\n",
-       "---------------------------------------------------------------------------------------------------------------------\n",
-       "1.0s^5 + 56.865975143087915s^4 + 353.5868367615613s^3 + 539.1664580485783s^2 + 1237.542488151249s - 29.06981819903537\n",
-       "\n",
-       "Input 2 to output 1\n",
-       "    -0.5912441821642531s^4 - 28.220306633762107s^3 + 72.2818863706899s^2 + 259.2270036346067s - 5.556438701975413\n",
-       "---------------------------------------------------------------------------------------------------------------------\n",
-       "1.0s^5 + 56.865975143087915s^4 + 353.5868367615613s^3 + 539.1664580485783s^2 + 1237.542488151249s - 29.06981819903537\n",
-       "\n",
-       "Input 2 to output 2\n",
-       "   0.7413453040827207s^4 + 41.576507059141875s^3 + 226.11177123383288s^2 + 33.72528055429143s + 62.06781885263827\n",
-       "---------------------------------------------------------------------------------------------------------------------\n",
-       "1.0s^5 + 56.865975143087915s^4 + 353.5868367615613s^3 + 539.1664580485783s^2 + 1237.542488151249s - 29.06981819903537\n",
-       "\n",
-       "Input 2 to output 3\n",
-       "  -7.105427357601002e-15s^4 - 0.52487574331019s^3 - 24.498193325268858s^2 + 92.52464448194496s + 262.24762351222216\n",
-       "---------------------------------------------------------------------------------------------------------------------\n",
-       "1.0s^5 + 56.865975143087915s^4 + 353.5868367615613s^3 + 539.1664580485783s^2 + 1237.542488151249s - 29.06981819903537\n",
-       "\n",
-       "Input 2 to output 4\n",
-       "0.0\n",
-       "---\n",
-       "1.0\n",
-       "\n",
-       "Input 2 to output 5\n",
-       "  -0.028459616487204187s^4 - 2.3148517338703414s^3 - 49.034384998219366s^2 - 221.6449666094627s + 19.85047641690079\n",
-       "---------------------------------------------------------------------------------------------------------------------\n",
-       "1.0s^5 + 56.865975143087915s^4 + 353.5868367615613s^3 + 539.1664580485783s^2 + 1237.542488151249s - 29.06981819903537\n",
-       "\n",
-       "Input 2 to output 6\n",
-       "-0.7278625110629946s^5 - 40.70936008573345s^4 - 216.3241779706487s^3 - 19.165130108775656s^2 + 321.64814211922624s - 61.18530489950365\n",
-       "--------------------------------------------------------------------------------------------------------------------------------------\n",
-       "        1.0s^5 + 56.865975143087915s^4 + 353.5868367615613s^3 + 539.1664580485783s^2 + 1237.542488151249s - 29.06981819903537\n",
-       "\n",
-       "Continuous-time transfer function model"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
+    "lm = Aircraft.linearize!(ac; trim_params)\n",
+    "\n",
     "lat_dyn = filter(lm;\n",
     "    u = (:aileron, :rudder),\n",
     "    x = (:v_y, :φ, :p, :r, :β_filt),\n",
     "    y = (:p, :r, :φ, :ψ, :β, :f_y))\n",
     "\n",
     "lat_dyn_ss = lat_dyn |> ss\n",
-    "lat_dyn_tf = lat_dyn_ss |> tf"
+    "lat_dyn_tf = lat_dyn_ss |> tf\n"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Roll Dynamics"
+    "## 1. Roll Rate Control"
    ]
   },
   {
@@ -1029,7 +944,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Turn Coordination"
+    "## 2. Turn Coordination"
    ]
   },
   {
@@ -1903,7 +1818,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Roll control and turn coordination"
+    "## 3. Roll control and turn coordination"
    ]
   },
   {
@@ -2282,7 +2197,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Bank angle control"
+    "## 4. Bank angle control"
    ]
   },
   {
