Designed FBW pitch and roll rate control

--- a/src/aircraft/c172/c172r/design/roll_yaw_cas.ipynb
+++ b/src/aircraft/c172/c172r/design/roll_yaw_cas.ipynb
@@ -250,15 +250,10 @@
     }
    ],
    "source": [
-    "#there is a natural pole-zero near-cancellations. it is in the right half plane,\n",
-    "#but its time constant is extremely slow. since they are natural (not achieved\n",
-    "#through compensation), we can probably simplify them. they likely represent\n",
-    "#nearly uncontrollable states, because the pole is insensitive to feedforward\n",
-    "#compensation. this pole-zero pair disappears when v_y is omitted from the\n",
-    "#lateral dynamics, so it may represent the intuitive notion that v_y is not\n",
-    "#really controllable in a conventional aircraft! it is not mathematical, exact\n",
-    "#uncontrollability (which would result in exact pole-zero cancellation), but\n",
-    "#practical uncontrollability\n",
+    "#there is a natural pole-zero near-cancellation. it is in the right half plane,\n",
+    "#but its time constant is extremely slow. it represents a nearly uncontrollable\n",
+    "#mode. it is not mathematical, exact uncontrollability (which would result in\n",
+    "#exact pole-zero cancellation), but practical uncontrollability\n",
     "a2p = minreal(roll_dyn_tf, 1e-2) \n",
     "@show zpk(a2p)\n",
     "\n",
