Total redesign of FlightComponents.Aircraft, FlightAircraft update pending

--- a/src/aircraft/c172/c172fbw/design/fbw_lon.ipynb
+++ b/src/aircraft/c172/c172fbw/design/fbw_lon.ipynb
@@ -427,6 +427,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "nyquistplot(qcmp_e2q)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1817,
    "metadata": {},
    "outputs": [
