Aircraft module update done, C172R update pending

--- a/src/aircraft/c172/c172fbw/design/fbw_lon.ipynb
+++ b/src/aircraft/c172/c172fbw/design/fbw_lon.ipynb
@@ -80,11 +80,11 @@
    ],
    "source": [
     "ac = Cessna172FBWBase(NED()) |> System #linearization requires NED kinematics\n",
-    "ac.airframe.pld.u.m_pilot = 75\n",
-    "ac.airframe.pld.u.m_copilot = 75\n",
-    "ac.airframe.pld.u.m_lpass = 0\n",
-    "ac.airframe.pld.u.m_rpass = 0\n",
-    "ac.airframe.pld.u.m_baggage = 0\n",
+    "ac.physics.airframe.pld.u.m_pilot = 75\n",
+    "ac.physics.airframe.pld.u.m_copilot = 75\n",
+    "ac.physics.airframe.pld.u.m_lpass = 0\n",
+    "ac.physics.airframe.pld.u.m_rpass = 0\n",
+    "ac.physics.airframe.pld.u.m_baggage = 0\n",
     "\n",
     "trim_params = C172FBW.TrimParameters(\n",
     "    Ob = Geographic(LatLon(), HOrth(1000)),\n",
@@ -94,11 +94,11 @@
     "    ψ_lb_dot = 0.00,\n",
     "    θ_lb_dot = 0.0,\n",
     "    β_a = 0.0,\n",
-    "    fuel = 1,\n",
+    "    fuel_load = 1,\n",
     "    mixture = 0.5,\n",
     "    flaps = 0.0)\n",
     "\n",
-    "lm = linearize!(ac; trim_params)\n",
+    "lm = linearize!(ac, trim_params)\n",
     "\n",
     "u_lon_labels = [:throttle_cmd, :elevator_cmd]\n",
     "x_lon_labels = [:q, :θ, :v_x, :v_z, :α_filt, :ω_eng, :thr_v, :thr_p, :ele_v, :ele_p]\n",
@@ -422,7 +422,7 @@
     "ε_qcmp_e2q_cl = 1/(1+tf(qcmp_e2q))\n",
     "ε_qcmp_e2q_cl(0) |> display\n",
     "\n",
-    "marginplot(qcmp_e2q) "
+    "marginplot(qcmp_e2q)"
    ]
   },
   {
@@ -823,7 +823,7 @@
     "\n",
     "#verify we get the same response as with the SISO closed loop\n",
     "qdmd2q = thr_q_MIMO[:q, :q_dmd]\n",
-    "step(qdmd2q, 10) |> plot \n",
+    "step(qdmd2q, 10) |> plot\n",
     "\n",
     "#thr_q_MIMO is our new plant baseline: longitudinal dynamics with embedded pitch\n",
     "#rate control and throttle_cmd and q_dmd as inputs"
@@ -982,7 +982,7 @@
     "poles(ε_qdmd2θ_cl) |> display\n",
     "#final value theorem to find steady-state error\n",
     "@show ε_qdmd2θ_cl(0)\n",
-    "step(ε_qdmd2θ_cl, 10) |> plot "
+    "step(ε_qdmd2θ_cl, 10) |> plot"
    ]
   },
   {
@@ -1175,7 +1175,7 @@
     "ε_θcmp_qdmd2θ_cl = 1/(1+tf(θcmp_qdmd2θ))\n",
     "@show ε_θcmp_qdmd2θ_cl(0)\n",
     "\n",
-    "marginplot(θcmp_qdmd2θ) "
+    "marginplot(θcmp_qdmd2θ)"
    ]
   },
   {
@@ -1424,7 +1424,7 @@
     "\n",
     "#check we get the same response as with the SISO closed loop\n",
     "θdmd2θ = thr_θ_MIMO[:θ, :θ_dmd]\n",
-    "step(θdmd2θ, 10) |> plot "
+    "step(θdmd2θ, 10) |> plot"
    ]
   },
   {
@@ -1738,7 +1738,7 @@
     "ε_vtcmp_t2v_cl = 1/(1+tf(vtcmp_t2v))\n",
     "@show ε_vtcmp_t2v_cl(0)\n",
     "\n",
-    "marginplot(vtcmp_t2v) "
+    "marginplot(vtcmp_t2v)"
    ]
   },
   {
@@ -1980,7 +1980,7 @@
     "\n",
     "#check we get the same response as with the SISO closed loop\n",
     "TASdmd2TAS = vt_θ_MIMO[:TAS, :TAS_dmd]\n",
-    "step(TASdmd2TAS, 20) |> plot "
+    "step(TASdmd2TAS, 20) |> plot"
    ]
   }
  ],
