Overhauled C172FBW trimming and linearization

--- a/src/aircraft/c172/c172r/design/pitch_cas.ipynb
+++ b/src/aircraft/c172/c172r/design/pitch_cas.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "lm = Aircraft.linearize!(ac; trim_params)\n",
     "\n",
-    "long_dyn = filter(lm;\n",
+    "long_dyn = submodel(lm;\n",
     "    u = (:elevator, :throttle),\n",
     "    x = (:v_x, :v_z, :θ, :q, :α_filt, :ω_eng),\n",
     "    y = (:q, :θ, :α, :TAS, :f_x, :f_z, :ω_eng))\n",
@@ -112,7 +112,7 @@
    "source": [
     "\n",
     "#we can reduce the model further for CAS by omitting omega_eng and throttle\n",
-    "pitch_dyn = filter(lm; u = (:elevator,),\n",
+    "pitch_dyn = submodel(lm; u = (:elevator,),\n",
     "    x = (:v_x, :v_z, :θ, :q, :α_filt),\n",
     "    y = (:q, :θ, :α, :TAS))\n",
     "\n",
@@ -372,7 +372,7 @@
     "k_i = 35\n",
     "k_d = 0.6\n",
     "q_comp = series(k_p + k_i * tf(1, [1,0]) + k_d * tf([1, 0], [0.05, 1]), tf(1, [1, 0]))\n",
-    "    \n",
+    "\n",
     "e2q_c = series(q_comp, e2q)\n",
     "e2q_c = minreal(e2q_c, 1e-3)\n",
     "@show zpk(e2q_c)\n",
@@ -943,7 +943,7 @@
     "τ_d = 0.02\n",
     "q_comp = tf(1, [1, 0]) * (k_p + k_i * tf(1, [1,0]) + k_d * tf([1, 0], [τ_d, 1]))\n",
     "act = tf(1, [0.2, 1])\n",
-    "    \n",
+    "\n",
     "e2q_c = q_comp * act * e2q\n",
     "e2q_c = minreal(e2q_c, 1e-3)\n",
     "@show zpk(e2q_c)\n",
@@ -1145,7 +1145,7 @@
     }
    ],
    "source": [
-    "err_q2θ = 1/(1+tf(q2θ)) \n",
+    "err_q2θ = 1/(1+tf(q2θ))\n",
     "@show err_q2θ(0) #steady state error for a step input\n",
     "#we can see this is essentially a type 1 transfer function. we can achieve zero\n",
     "#steady state error for a step input just with proportional control"
@@ -1305,7 +1305,7 @@
    "source": [
     "k_θ = 2.8\n",
     "θ_cmp = ss(k_θ)\n",
-    "    \n",
+    "\n",
     "c_q2θ = series(θ_cmp, q2θ)\n",
     "c_q2θ = minreal(c_q2θ, 1e-3)\n",
     "@show zpk(c_q2θ)\n",
@@ -1815,7 +1815,7 @@
     "k_d_θ = 0.35\n",
     "τ_d_θ = 0.04\n",
     "θ_cmp = k_p_θ + k_i_θ * tf(1, [1,0]) + k_d_θ * tf([1, 0], [τ_d_θ, 1])\n",
-    "    \n",
+    "\n",
     "c_q2θ = series(θ_cmp, q2θ)\n",
     "# c_q2θ = minreal(c_q2θ, 1e-3)\n",
     "@show zpk(c_q2θ)\n",
