--- a/src/aircraft/c172/c172r/design/roll_yaw_cas.ipynb
+++ b/src/aircraft/c172/c172r/design/roll_yaw_cas.ipynb
@@ -57,7 +57,7 @@
     "\n",
     "lm = Aircraft.linearize!(ac; trim_params)\n",
     "\n",
-    "lat_dyn = filter(lm;\n",
+    "lat_dyn = submodel(lm;\n",
     "    u = (:aileron, :rudder),\n",
     "    x = (:v_y, :φ, :p, :r, :β_filt),\n",
     "    y = (:p, :r, :φ, :ψ, :β, :f_y))\n",
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "roll_dyn = filter(lat_dyn;\n",
+    "roll_dyn = submodel(lat_dyn;\n",
     "    u = (:aileron,),\n",
     "    y = (:p,))\n",
     "\n",
@@ -254,7 +254,7 @@
     "#but its time constant is extremely slow. it represents a nearly uncontrollable\n",
     "#mode. it is not mathematical, exact uncontrollability (which would result in\n",
     "#exact pole-zero cancellation), but practical uncontrollability\n",
-    "a2p = minreal(roll_dyn_tf, 1e-2) \n",
+    "a2p = minreal(roll_dyn_tf, 1e-2)\n",
     "@show zpk(a2p)\n",
     "\n",
     "#output error transfer function for a unit feedback closed loop\n",
@@ -431,7 +431,7 @@
     "k_d = 0.05\n",
     "τ_d = 0.05\n",
     "p_cmp = k_p + k_i * tf(1, [1,0]) + k_d * tf([1, 0], [τ_d, 1])\n",
-    "    \n",
+    "\n",
     "c_a2p = series(p_cmp, a2p)\n",
     "err_c_a2p = 1/(1+c_a2p)\n",
     "@show zpk(err_c_a2p);\n",
@@ -925,7 +925,7 @@
     "#now create a feedback loop with K in the feedback path\n",
     "p_cmp_lat_dyn_cl = feedback(p_cmp_lat_dyn, K_p_ss)\n",
     "\n",
-    "#now extract the resulting closed-loop roll demand to roll rate transfer function \n",
+    "#now extract the resulting closed-loop roll demand to roll rate transfer function\n",
     "p_cl_MIMO = (p_cmp_lat_dyn_cl |> tf)[1,1]\n",
     "\n",
     "#make sure the zpk data matches that of the SISO closed loop TF\n",
@@ -982,7 +982,7 @@
     }
    ],
    "source": [
-    "yaw_dyn = filter(lat_dyn;\n",
+    "yaw_dyn = submodel(lat_dyn;\n",
     "    u = (:rudder,),\n",
     "    y = (:β,))\n",
     "\n",
@@ -1297,7 +1297,7 @@
     "\n",
     "#the compensator is the PID chained with the sign inversion\n",
     "β_cmp = series(c1, c2)\n",
-    "    \n",
+    "\n",
     "c_r2β = series(β_cmp, r2β)\n",
     "\n",
     "err_c_r2β = 1/(1+c_r2β)\n",
@@ -1799,7 +1799,7 @@
     "#now create a feedback loop with K in the feedback path\n",
     "β_cmp_lat_dyn_cl = feedback(β_cmp_lat_dyn, K_β_ss)\n",
     "\n",
-    "#now extract the resulting closed-loop beta demand to beta transfer function \n",
+    "#now extract the resulting closed-loop beta demand to beta transfer function\n",
     "β_cl_MIMO = β_cmp_lat_dyn_cl[5,2]\n",
     "\n",
     "#make sure the zpk data matches that of the SISO closed loop TF\n",
@@ -2329,7 +2329,7 @@
     "err_p2φ = 1/(1+p2φ)\n",
     "\n",
     "#ensure there are no unstable poles in the closed loop system so we can apply the final value theorem\n",
-    "@show poles(err_p2φ) \n",
+    "@show poles(err_p2φ)\n",
     "\n",
     "#steady state error of the closed loop system for a unit step input\n",
     "@show err_p2φ(0)\n",
@@ -2499,7 +2499,7 @@
     "k_d = 0 #0.35 #0\n",
     "τ_d = 0.05\n",
     "φ_cmp = (k_p + k_i * tf(1, [1,0]) + k_d * tf([1, 0], [τ_d, 1])) |> ss\n",
-    "    \n",
+    "\n",
     "c_p2φ = series(φ_cmp, p2φ)\n",
     "err_c_p2φ = 1/(1+c_p2φ)\n",
     "\n",
@@ -2786,7 +2786,7 @@
     "#now create a feedback loop with K in the feedback path\n",
     "φ_cmp_lat_dyn_cl = feedback(φ_cmp_lat_dyn, K_φ_ss)\n",
     "\n",
-    "#now extract the resulting closed-loop phi demand to phi transfer function \n",
+    "#now extract the resulting closed-loop phi demand to phi transfer function\n",
     "φ_cl_MIMO = φ_cmp_lat_dyn_cl[3, 1] |> tf\n",
     "\n",
     "#make sure the zpk data matches that of the SISO closed loop TF\n",
