--- a/src/aircraft/c172/c172fbw/variants/cas/design/fbw_lon ss.ipynb
+++ b/src/aircraft/c172/c172fbw/variants/cas/design/fbw_lon ss.ipynb
@@ -46,7 +46,7 @@
     "aft_cg_pld = C172.PayloadU(m_pilot = 50, m_copilot = 50, m_baggage = 100)\n",
     "mid_cg_pld = C172.PayloadU(m_pilot = 75, m_copilot = 75, m_baggage = 50)\n",
     "\n",
-    "design_condition = C172FBW.TrimParameters(\n",
+    "design_condition = C172.TrimParameters(\n",
     "    Ob = Geographic(LatLon(), HOrth(1000)),\n",
     "    EAS = 40.0,\n",
     "    γ_wOb_n = 0.0,\n",
