--- a/src/aircraft/c172/c172fbw/variants/mcs/design/fbw_lon ss.ipynb
+++ b/src/aircraft/c172/c172fbw/variants/mcs/design/fbw_lon ss.ipynb
@@ -25,16 +25,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
     "ac = Cessna172FBWBase(NED()) |> System #linearization requires NED kinematics\n",
-    "\n",
-    "#same mass in all cases\n",
-    "fwd_cg_pld = C172.PayloadU(m_pilot = 100, m_copilot = 100, m_baggage = 0)\n",
-    "aft_cg_pld = C172.PayloadU(m_pilot = 50, m_copilot = 50, m_baggage = 100)\n",
-    "mid_cg_pld = C172.PayloadU(m_pilot = 75, m_copilot = 75, m_baggage = 50)\n",
     "\n",
     "design_condition = C172.TrimParameters(\n",
     "    Ob = Geographic(LatLon(), HOrth(1000)),\n",
@@ -42,10 +37,10 @@
     "    γ_wOb_n = 0.0,\n",
     "    x_fuel = 0.5,\n",
     "    flaps = 0.0,\n",
-    "    payload = mid_cg_pld)\n",
+    "    payload = C172.PayloadU(m_pilot = 75, m_copilot = 75, m_baggage = 50))\n",
     "\n",
-    "lss_lon = Control.LinearStateSpace(ac, design_condition; model = :lon);\n",
-    "nss_lon = named_ss(lss_lon);\n",
+    "P_lss_full = Control.LinearStateSpace(ac, design_condition; model = :lon);\n",
+    "P_nss_full = named_ss(P_lss_full);\n",
     "\n",
     "x_labels = [:q, :θ, :v_x, :v_z, :α_filt, :ω_eng, :ele_v, :ele_p, :thr_v, :thr_p]\n",
     "u_labels = [:elevator_cmd, :throttle_cmd]\n",
@@ -54,8 +49,8 @@
     "# u_labels_pitch = [:elevator_cmd]\n",
     "# y_labels_pitch = [:q, :θ, :α, :EAS]\n",
     "\n",
-    "lss = submodel(lss_lon; x = x_labels, u = u_labels, y = y_labels)\n",
-    "nss = named_ss(lss);"
+    "P_lss = submodel(P_lss_full; x = x_labels, u = u_labels, y = y_labels)\n",
+    "P_nss = named_ss(P_lss);"
    ]
   },
   {
@@ -76,13 +71,14 @@
      "text": [
       "|        Pole        |   Damping     |   Frequency   |   Frequency   | Time Constant |\n",
       "|                    |    Ratio      |   (rad/sec)   |     (Hz)      |     (sec)     |\n",
-      "+--------------------+---------------+---------------+---------------+---------------+\n"
+      "+--------------------+---------------+---------------+---------------+---------------+"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "\n",
       "| -0.000369          |  1            |  0.000369     |  5.87e-05     |  2.71e+03     |\n"
      ]
     },
@@ -109,8 +105,8 @@
     }
    ],
    "source": [
-    "dampreport(nss_lon)\n",
-    "dampreport(nss)"
+    "dampreport(P_nss_full)\n",
+    "dampreport(P_nss)"
    ]
   },
   {
@@ -128,7 +124,7 @@
     {
      "data": {
       "text/plain": [
-       "7.656238481914206e7"
+       "7.656238481914343e7"
       ]
      },
      "metadata": {},
@@ -137,7 +133,7 @@
     {
      "data": {
       "text/plain": [
-       "440485.8084271008"
+       "440485.80842732603"
       ]
      },
      "metadata": {},
@@ -145,8 +141,8 @@
     }
    ],
    "source": [
-    "cond(nss_lon.A) |> display\n",
-    "cond(nss.A) |> display"
+    "cond(P_nss_full.A) |> display\n",
+    "cond(P_nss.A) |> display"
    ]
   },
   {
@@ -158,23 +154,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "10×10 Matrix{Float64}:\n",
-       "   5.24175       1.73723e-6     16.7863   …      -1.50383       0.0315657\n",
-       "   1.73723e-6    2.18367       -11.5022          -0.0315657    -0.000317977\n",
-       "  16.7863      -11.5022       2237.85            -8.17028       0.13902\n",
-       "  10.7133        6.44921        12.2094          -1.2785       -0.00806454\n",
-       "   0.131826      0.175557       -3.5167          -0.00366141   -0.000503233\n",
-       "  61.871       -19.3129       5345.69     …  -10227.3         490.683\n",
-       " -93.4314       -4.34506        77.9313           0.0           0.0\n",
-       "   4.34507       0.0713036      -3.16453          0.0           0.0\n",
-       "  -1.50383      -0.0315657      -8.17028      12919.3           0.0\n",
-       "   0.0315657    -0.000317977     0.13902          0.0          13.09"
+       "(iscontrollable = true, ranks = [10, 10, 10, 10, 10, 10, 10, 10, 10, 10], sigma_min = [0.0026382090058166643, 1.2392048041221948, 1.2392048041221948, 1.2392048041221948, 1.2392048041221948, 0.4879588010303914, 0.4425611178586627, 0.4425611178586627, 0.040256617772433265, 0.040256617772433265])"
       ]
      },
      "metadata": {},
@@ -182,7 +168,7 @@
     }
    ],
    "source": [
-    "gram(nss, :c)"
+    "controllability(P_nss)"
    ]
   },
   {
@@ -213,48 +199,95 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
-     "ename": "UndefVarError",
-     "evalue": "UndefVarError: `x_labels_pitch` not defined",
+     "data": {
+      "text/plain": [
+       "2×10 Matrix{Float64}:\n",
+       " 0.644496    2.49538   -0.0981694  -0.0523089  …  -7.31752e-5   -0.00147389\n",
+       " 0.0320388  -0.532192   0.0771073   0.012023       0.000169545   0.00640854"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "┌ Warning: The following inputs were unconnected [:elevator_cmd, :throttle_cmd], ignore this warning if you rely on prefix matching\n",
+      "└ @ RobustAndOptimalControl C:\\Users\\Miguel\\.julia\\packages\\RobustAndOptimalControl\\CHKAo\\src\\named_systems2.jl:392\n",
+      "┌ Warning: The following outputs were unconnected Any[:elevator_cmd, :throttle_cmd, :α, :EAS, :TAS, :f_x, :f_z, :γ, :c, :v_D], ignore this warning if you rely on prefix matching\n",
+      "└ @ RobustAndOptimalControl C:\\Users\\Miguel\\.julia\\packages\\RobustAndOptimalControl\\CHKAo\\src\\named_systems2.jl:394\n"
+     ]
+    },
+    {
+     "ename": "ErrorException",
+     "evalue": "The indexed NamedSystem has no signal named Colon(), available names are [:elevator_cmd, :throttle_cmd, :q, :θ, :α, :EAS, :TAS, :f_x, :f_z, :γ, :c, :ω_eng, :v_D, :elevator_fbk, :throttle_fbk]",
      "output_type": "error",
      "traceback": [
-      "UndefVarError: `x_labels_pitch` not defined\n",
+      "The indexed NamedSystem has no signal named Colon(), available names are [:elevator_cmd, :throttle_cmd, :q, :θ, :α, :EAS, :TAS, :f_x, :f_z, :γ, :c, :ω_eng, :v_D, :elevator_fbk, :throttle_fbk]\n",
       "\n",
       "Stacktrace:\n",
-      " [1] top-level scope\n",
-      "   @ c:\\Users\\Miguel\\.julia\\dev\\Flight\\src\\aircraft\\c172\\c172fbw\\variants\\mcs\\design\\fbw_lon ss.ipynb:4"
+      " [1] error(s::String)\n",
+      "   @ Base .\\error.jl:35\n",
+      " [2] names2indices(names::Vector{Colon}, allnames::Vector{Symbol})\n",
+      "   @ RobustAndOptimalControl C:\\Users\\Miguel\\.julia\\packages\\RobustAndOptimalControl\\CHKAo\\src\\named_systems2.jl:591\n",
+      " [3] feedback(s1::NamedStateSpace{Continuous, StateSpace{Continuous, Float64}}, s2::NamedStateSpace{Continuous, StateSpace{Continuous, Bool}}; u1::Vector{Symbol}, w1::Vector{Symbol}, z1::Vector{Colon}, y1::Vector{Symbol}, u2::Function, y2::Function, w2::Vector{Any}, z2::Vector{Any}, kwargs::Base.Pairs{Symbol, Bool, Tuple{Symbol}, NamedTuple{(:pos_feedback,), Tuple{Bool}}})\n",
+      "   @ RobustAndOptimalControl C:\\Users\\Miguel\\.julia\\packages\\RobustAndOptimalControl\\CHKAo\\src\\named_systems2.jl:354\n",
+      " [4] connect(systems::Vector{NamedStateSpace{Continuous, StateSpace{Continuous, Float64}}}; u1::Vector{Symbol}, y1::Vector{Symbol}, w1::Vector{Symbol}, z1::Vector{Colon}, verbose::Bool, kwargs::Base.Pairs{Symbol, Union{}, Tuple{}, NamedTuple{(), Tuple{}}})\n",
+      "   @ RobustAndOptimalControl C:\\Users\\Miguel\\.julia\\packages\\RobustAndOptimalControl\\CHKAo\\src\\named_systems2.jl:406\n",
+      " [5] connect\n",
+      "   @ C:\\Users\\Miguel\\.julia\\packages\\RobustAndOptimalControl\\CHKAo\\src\\named_systems2.jl:383 [inlined]\n",
+      " [6] connect(systems::Vector{NamedStateSpace{Continuous, StateSpace{Continuous, Float64}}}, pairs::Vector{Pair{Symbol, Symbol}}; kwargs::Base.Pairs{Symbol, Vector, Tuple{Symbol, Symbol}, NamedTuple{(:w1, :z1), Tuple{Vector{Symbol}, Vector{Colon}}}})\n",
+      "   @ RobustAndOptimalControl C:\\Users\\Miguel\\.julia\\packages\\RobustAndOptimalControl\\CHKAo\\src\\named_systems2.jl:468\n",
+      " [7] top-level scope\n",
+      "   @ c:\\Users\\Miguel\\.julia\\dev\\Flight.jl\\src\\aircraft\\c172\\c172fbw\\variants\\mcs\\design\\fbw_lon ss.ipynb:22"
      ]
     }
    ],
    "source": [
-    "#we do not particularly care about driving the elevator velocity and position\n",
-    "#back to zero as fast as possible. we do care about q, θ and α\n",
-    "v_ref = sqrt(lss.x0.v_x^2 + lss.x0.v_z^2)\n",
-    "diagQ_pitch = ComponentVector(q = 1, θ = 1, v_x = 1, v_z = 1, α_filt = 0, ele_v = 0, ele_p = 0)\n",
-    "Q_pitch = ComponentMatrix(diagm(diagQ_pitch), Axis(x_labels_pitch), Axis(x_labels_pitch))\n",
-    "R_pitch = 5\n",
+    "@unpack x0, u0 = P_lss\n",
+    "@unpack v_x, v_z = x0\n",
+    "v_norm = norm([v_x, v_z])\n",
     "\n",
-    "#gain matrix for the reduced pitch dynamics\n",
-    "K_pitch = lqr(nss_pitch, Q_pitch, R_pitch)\n",
-    "display(K_pitch)\n",
+    "#the states we care about are q, θ, v_x, v_z (equivalent to V and α)\n",
+    "diagQ = ComponentVector(q = 1, θ = 1, v_x = 1/v_norm, v_z = 1/v_norm, α_filt = 0, ω_eng = 0, ele_v = 0, ele_p = 0, thr_v = 0, thr_p = 0)\n",
+    "diagR = ComponentVector(elevator_cmd = 1, thr_cmd = 1)\n",
+    "Q = ComponentMatrix(diagm(diagQ), Axis(x_labels), Axis(x_labels))\n",
+    "R = ComponentMatrix(diagm(diagR), Axis(x_labels), Axis(x_labels))\n",
     "\n",
-    "#add pitch regulation to the reduced pitch dynamics\n",
-    "A_pitch_sas = lss_pitch.A - lss_pitch.B * K_pitch\n",
-    "nss_pitch_sas = named_ss(ss(A_pitch_sas, lss_pitch.B, lss_pitch.C, 0), u = [:sas_pitch_cmd], x = nss_pitch.x, y = nss_pitch.y);\n",
+    "#feedback gain matrix\n",
+    "C_fbk = lqr(P_nss, Q, R)\n",
+    "display(C_fbk)\n",
     "\n",
-    "dampreport(nss_pitch)\n",
-    "dampreport(nss_pitch_sas)\n",
-    "e2q = nss_pitch[:q, :elevator_cmd]\n",
-    "e2q_sas = nss_pitch_sas[:q, :sas_pitch_cmd]\n",
-    "e2θ = nss_pitch[:θ, :elevator_cmd]\n",
-    "e2θ_sas = nss_pitch_sas[:θ, :sas_pitch_cmd]\n",
-    "step(e2q, 10) |> plot\n",
-    "step(e2q_sas, 10) |> plot!\n",
+    "C_fbk_ss = named_ss(ss(C_fbk); u = x_labels, y = [:elevator_fbk, :throttle_fbk])\n",
     "\n",
-    "A_pitch_sas[:θ, :]"
+    "\n",
+    "elevator_sum = sumblock(\"elevator_cmd = elevator_fwd - elevator_fbk\")\n",
+    "throttle_sum = sumblock(\"throttle_cmd = throttle_fwd- throttle_fbk\")\n",
+    "connections = vcat(Pair.(x_labels, x_labels), Pair.(C_ss.y, C_ss.y))\n",
+    "\n",
+    "P_nss_fbk = connect([elevator_sum, throttle_sum, P_nss, C_fbk_ss], connections; w1 = [:elevator_fwd, :throttle_fwd])\n",
+    "\n",
+    "# lon_sum = sumblock(\"q_err = q_dmd - q\")\n",
+    "# thr_q_MIMO = connect([q2e_sum, C_q2e, thr_ele_MIMO], [:q_err=>:q_err, :q=>:q, :elevator_cmd=>:elevator_cmd], w1 = [:throttle_cmd, :q_dmd], z1 = thr_ele_MIMO.y)\n",
+    "# #add pitch regulation to the reduced pitch dynamics\n",
+    "# A_pitch_sas = lss_pitch.A - lss_pitch.B * K_pitch\n",
+    "# nss_pitch_sas = named_ss(ss(A_pitch_sas, lss_pitch.B, lss_pitch.C, 0), u = [:sas_pitch_cmd], x = nss_pitch.x, y = nss_pitch.y);\n",
+    "\n",
+    "# dampreport(nss_pitch)\n",
+    "# dampreport(nss_pitch_sas)\n",
+    "# e2q = nss_pitch[:q, :elevator_cmd]\n",
+    "# e2q_sas = nss_pitch_sas[:q, :sas_pitch_cmd]\n",
+    "# e2θ = nss_pitch[:θ, :elevator_cmd]\n",
+    "# e2θ_sas = nss_pitch_sas[:θ, :sas_pitch_cmd]\n",
+    "# step(e2q, 10) |> plot\n",
+    "# step(e2q_sas, 10) |> plot!\n",
+    "\n",
+    "# A_pitch_sas[:θ, :]"
    ]
   },
   {
@@ -271,7 +304,7 @@
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ c:\\Users\\Miguel\\.julia\\dev\\Flight\\src\\aircraft\\c172\\c172fbw\\variants\\mcs\\design\\fbw_lon ss.ipynb:5"
+      "   @ c:\\Users\\Miguel\\.julia\\dev\\Flight.jl\\src\\aircraft\\c172\\c172fbw\\variants\\mcs\\design\\fbw_lon ss.ipynb:5"
      ]
     }
    ],
@@ -310,7 +343,7 @@
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ c:\\Users\\Miguel\\.julia\\dev\\Flight\\src\\aircraft\\c172\\c172fbw\\variants\\mcs\\design\\fbw_lon ss.ipynb:1"
+      "   @ c:\\Users\\Miguel\\.julia\\dev\\Flight.jl\\src\\aircraft\\c172\\c172fbw\\variants\\mcs\\design\\fbw_lon ss.ipynb:1"
      ]
     }
    ],
@@ -332,7 +365,7 @@
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ c:\\Users\\Miguel\\.julia\\dev\\Flight\\src\\aircraft\\c172\\c172fbw\\variants\\mcs\\design\\fbw_lon ss.ipynb:1"
+      "   @ c:\\Users\\Miguel\\.julia\\dev\\Flight.jl\\src\\aircraft\\c172\\c172fbw\\variants\\mcs\\design\\fbw_lon ss.ipynb:1"
      ]
     }
    ],
@@ -354,7 +387,7 @@
       "\n",
       "Stacktrace:\n",
       " [1] top-level scope\n",
-      "   @ c:\\Users\\Miguel\\.julia\\dev\\Flight\\src\\aircraft\\c172\\c172fbw\\variants\\mcs\\design\\fbw_lon ss.ipynb:2"
+      "   @ c:\\Users\\Miguel\\.julia\\dev\\Flight.jl\\src\\aircraft\\c172\\c172fbw\\variants\\mcs\\design\\fbw_lon ss.ipynb:2"
      ]
     }
    ],
