Simplified imports, removed some unused code

--- a/src/aircraft/c172/c172fbw/variants/cas/design/fbw_lon ss.ipynb
+++ b/src/aircraft/c172/c172fbw/variants/cas/design/fbw_lon ss.ipynb
@@ -9,10 +9,8 @@
     "using Flight.FlightCore.Systems\n",
     "using Flight.FlightCore.Plotting\n",
     "\n",
-    "using Flight.FlightPhysics.Geodesy\n",
-    "using Flight.FlightPhysics.Kinematics\n",
-    "using Flight.FlightComponents.Aircraft\n",
-    "using Flight.FlightComponents.Control\n",
+    "using Flight.FlightPhysics\n",
+    "using Flight.FlightComponents\n",
     "using Flight.FlightAircraft.C172FBW\n",
     "using Flight.FlightAircraft.C172\n",
     "\n",
