Added control inputs to measurement vector in linearized models

--- a/src/aircraft/c172/c172fbw/variants/mcs/design/mcs_θv_pint.ipynb
+++ b/src/aircraft/c172/c172fbw/variants/mcs/design/mcs_θv_pint.ipynb
@@ -23,19 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "39.99999999999999"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "ac = Cessna172FBWBase(NED()) |> System #linearization requires NED kinematics\n",
     "\n",
@@ -123,9 +113,8 @@
     "n_x, n_u = size(G) #number of states and control inputs\n",
     "\n",
     "H_x = P_lss.C[(:θ, :EAS), :]\n",
-    "n_y = size(H_x)[1] #number of selected command inputs (must be n_y ≤ n_u)\n",
-    "\n",
-    "H_u = zeros(n_y, n_u)\n",
+    "H_u = P_lss.D[(:θ, :EAS), :]\n",
+    "display(H_u)\n",
     "\n",
     "A = [F G; H_x H_u]\n",
     "B = inv(A)\n",
@@ -133,7 +122,7 @@
     "B_12 = B[1:n_x, n_x+1:end]\n",
     "B_22 = B[n_x+1:end, n_x+1:end]\n",
     "C_fwd = B_22 + C_fbk * B_12\n",
-    "C_fwd_ss = named_ss(ss(C_fwd), u = [:θ_dmd, :EAS_dmd], y = [:elevator_fwd, :throttle_fwd])"
+    "C_fwd_ss = named_ss(ss(C_fwd), u = [:θ_dmd, :EAS_dmd], y = [:elevator_fwd, :throttle_fwd]);"
    ]
   },
   {
