Reorganized Control module

--- a/src/aircraft/c172/c172fbw/variants/mcs/design/mcs_θv_p.ipynb
+++ b/src/aircraft/c172/c172fbw/variants/mcs/design/mcs_θv_p.ipynb
@@ -39,23 +39,20 @@
    "source": [
     "ac = Cessna172FBWBase(NED()) |> System #linearization requires NED kinematics\n",
     "\n",
-    "#use default trim condition\n",
     "design_point = C172.TrimParameters()\n",
     "\n",
-    "P_lss_lon = Control.LinearStateSpace(ac, design_point; model = :lon);\n",
+    "P_lss_lon = Control.Continuous.LinearizedSS(ac, design_point; model = :lon);\n",
     "P_nss_lon = named_ss(P_lss_lon);\n",
     "\n",
     "x_labels_lon = keys(P_lss_lon.x0) |> collect\n",
     "y_labels_lon = keys(P_lss_lon.y0) |> collect\n",
     "u_labels_lon = keys(P_lss_lon.u0) |> collect\n",
+    "\n",
     "x_labels = deleteat!(x_labels_lon, findfirst(isequal(:h), x_labels_lon))\n",
     "y_labels = deleteat!(y_labels_lon, findfirst(isequal(:h), y_labels_lon))\n",
     "u_labels = u_labels_lon\n",
-    "# x_labels = x_labels_lon\n",
-    "# y_labels = y_labels_lon\n",
-    "# u_labels = u_labels_lon\n",
     "\n",
-    "P_lss = submodel(P_lss_lon; x = x_labels, u = u_labels, y = y_labels)\n",
+    "P_lss = Control.Continuous.submodel(P_lss_lon; x = x_labels, u = u_labels, y = y_labels)\n",
     "P_nss = named_ss(P_lss);"
    ]
   },
