Fixed serious flaw in PID implementations, finished MCS Avionics unit tests

--- a/tutorials/01_systems.ipynb
+++ b/tutorials/01_systems.ipynb
@@ -346,14 +346,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "th = TimeHistory(sim);"
+    "ts = TimeSeries(sim);"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The `TimeHistory` type groups an array of logged values with its corresponding array of simulation times. Here are some examples of what it supports:"
+    "The `TimeSeries` type groups an array of logged values with its corresponding array of simulation times. Here are some examples of what it supports:"
    ]
   },
   {
@@ -365,10 +365,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "typeof(th) = TimeHistory{MassSpringDamperY, Vector{Float64}, Vector{MassSpringDamperY}}\n",
-      "length(th) = 501\n",
+      "typeof(ts) = TimeSeries{MassSpringDamperY, Vector{Float64}, Vector{MassSpringDamperY}}\n",
+      "length(ts) = 501\n",
       "length(th_3) = 350\n",
-      "typeof(th_p) = TimeHistory{Float64, Vector{Float64}, Vector{Float64}}\n"
+      "typeof(th_p) = TimeSeries{Float64, Vector{Float64}, Vector{Float64}}\n"
      ]
     },
     {
@@ -692,18 +692,18 @@
     }
    ],
    "source": [
-    "@show typeof(th)\n",
-    "@show length(th)\n",
+    "@show typeof(ts)\n",
+    "@show length(ts)\n",
     "\n",
-    "t = timestamps(th)\n",
+    "t = timestamps(ts)\n",
     "\n",
-    "th_3 = th[t .> 3]; #can be indexed into\n",
+    "th_3 = ts[t .> 3]; #can be indexed into\n",
     "@show length(th_3)\n",
     "\n",
-    "th_p = th.p #accessing a field of the logged type returns a TimeHistory for that field\n",
+    "th_p = ts.p #accessing a field of the logged type returns a TimeSeries for that field\n",
     "@show typeof(th_p)\n",
     "\n",
-    "#default Plot recipes are provided for TimeHistory{<:Real} and TimeHistory{<:AbstractVector{<:Real}}\n",
+    "#default Plot recipes are provided for TimeSeries{<:Real} and TimeSeries{<:AbstractVector{<:Real}}\n",
     "using Plots\n",
     "plot(th_p; plot_title = \"Mass Position\", ylabel = \"p (m)\") #plot position"
    ]
