--- a/tutorials/01_systems.ipynb
+++ b/tutorials/01_systems.ipynb
@@ -120,10 +120,10 @@
     "    t_last_stopped::Float64 = 0.0\n",
     "end\n",
     "\n",
-    "Systems.init(::SystemX, ::MassSpringDamper) = ComponentVector(p = 0.0, v = 0.0)\n",
-    "Systems.init(::SystemU, ::MassSpringDamper) = Ref(0.0)\n",
-    "Systems.init(::SystemY, ::MassSpringDamper) = MassSpringDamperY()\n",
-    "Systems.init(::SystemS, ::MassSpringDamper) = MassSpringDamperS()"
+    "Systems.X(::MassSpringDamper) = ComponentVector(p = 0.0, v = 0.0)\n",
+    "Systems.U(::MassSpringDamper) = Ref(0.0)\n",
+    "Systems.Y(::MassSpringDamper) = MassSpringDamperY()\n",
+    "Systems.S(::MassSpringDamper) = MassSpringDamperS()"
    ]
   },
   {
